Cambié la imagen 1 de los packs

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 </div>
 <br
 <div class="paquete">
-	<img src="pack4.png" alt="Paquete turístico 1" class="imagen-izquierda">
+	<img src="pack.png" alt="Paquete turístico 1" class="imagen-izquierda">
 	<div class="contenido-derecha">
 	  <h3>Tours</h3>
 	  <p>Descubrí los mejores destinos del mundo con nuestros tours personalizados.
@@ -229,7 +229,7 @@
   <button id="generar-pdf" class="oculto">Generar PDF</button>
   
   <img src="ciudades.png" alt="Ciudades del mundo">
-  
+
   <footer class="footer">
 	<p>Contacto: 0800-999-TRAVEL | Dirección: Av. Buenos Aires 1234, CABA | Email: info@travelcenter.com</p>
 	<p>Derechos reservados © 2023 Travel Center Vacation. Todos los derechos reservados.</p>
