Agregué comentarios para que quede más ordenado

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 	</div>
 	
 	
-
+ <!-- PRESENTACIÓN PERSONAL (EQUIPO DE LA EMPRESA) -->
 
 	<section class="team-section" style="background-image: url('fotos.png'); background-position: left; text-align: right;">
 		<h1>Team Travel Center</h1>
@@ -124,8 +124,7 @@
 	  </section>
 	  
 	  
-
-	<br
+ <!-- FORMULARIO BÁSICO -->
 
 	<div class="caja-formulario">
 		
@@ -149,39 +148,48 @@
 
 	  
 </div>
-<br
+
+ <!-- PAQUETES TURÍSTICOS -->
+
 <div class="paquete">
-	<img src="pack.png" alt="Paquete turístico 1" class="imagen-izquierda">
-	<div class="contenido-derecha">
-	  <h3>Tours</h3>
-	  <p>Descubrí los mejores destinos del mundo con nuestros tours personalizados.
-		...
+	<img src="pack.png" alt="Paquete turístico Tours" class="imagen-derecha>
+	<div class="contenido-izquierda>
+	  <h2>Tours inolvidables</h2>
+	  
+	  <p>Descubrí los mejores destinos del mundo con nuestros tours 
+		personalizados.
 	  </p>
 	  
 	</div>
   </div>
   
   <div class="paquete">
-	<img src="pack2.png" alt="Paquete turístico 2" class="imagen-derecha">
+	<img src="pack2.png" alt="Paquete turístico Cruceros" class="imagen-derecha">
 	<div class="contenido-izquierda">
-	  <h3>Mejores Cruceros </h3>
-	  <p>¿Querés disfrutar de un crucero a medida y al mejor precio? Travel Center ofrece paquetes de vacaciones en crucero diseñados específicamente para satisfacer tus gustos y necesidades, a los precios más bajos disponibles en el mercado.
-		...
+	  <h2>Mejores Cruceros </h2>
+	  
+	  <p>¿Querés disfrutar de un crucero a medida y al mejor precio? 
+		Travel Center ofrece paquetes de vacaciones en crucero diseñados 
+		específicamente para satisfacer tus gustos y necesidades, 
+		a los precios más bajos disponibles en el mercado.
 	  </p>
 	  
 	</div>
   </div>
   
   <div class="paquete">
-	<img src="pack3.png" alt="Paquete turístico 3" class="imagen-izquierda">
-	<div class="contenido-derecha">
-	  <h3>Excursiones Únicas </h3>
-	  <p>Ofrecemos una amplia variedad de excursiones diarias regulares y personalizadas con guías multilingües especializados.</p>
+	<img src="pack3.png" alt="Paquete turístico Excursiones class="imagen-derecha>
+	<div class="contenido-izquierda">
+	  <h2>Excursiones Únicas </h2>
+
+	  <p>Ofrecemos una amplia variedad de excursiones diarias regulares 
+		y personalizadas con guías multilingües especializados.</p>
 	  
 	</div>
   </div>
 
-  <!-- Formulario wizard -->
+  <!-- FORMULARIO DE PROCESO ESTILO WIZARD -->
+
 <form id="formulario">
 	<!-- Paso 1 -->
 	<div class="paso" id="paso1">
@@ -227,9 +235,11 @@
   
   <!-- Botón para generar PDF -->
   <button id="generar-pdf" class="oculto">Generar PDF</button>
-  
+
+   <!-- IMAGEN PRINCIPAL SECUNDARIA  -->
   <img src="ciudades.png" alt="Ciudades del mundo">
 
+   <!-- FOOTER -->
   <footer class="footer">
 	<p>Contacto: 0800-999-TRAVEL | Dirección: Av. Buenos Aires 1234, CABA | Email: info@travelcenter.com</p>
 	<p>Derechos reservados © 2023 Travel Center Vacation. Todos los derechos reservados.</p>
