eSTILOS DE LA IMAGEN PRINCIPAL SECUNDARIA

--- a/index.html
+++ b/index.html
@@ -237,7 +237,9 @@
   <button id="generar-pdf" class="oculto">Generar PDF</button>
 
    <!-- IMAGEN PRINCIPAL SECUNDARIA  -->
-  <img src="ciudades.png" alt="Ciudades del mundo">
+   <div class="container">
+	<img src="ciudades.png" alt="Ciudades del mundo" class="cities-image">
+</div>
 
    <!-- FOOTER -->
   <footer class="footer">
