Arreglando alineación de paguetes turísticos

--- a/index.html
+++ b/index.html
@@ -149,16 +149,12 @@
 	  
 </div>
 
- <!-- PAQUETES TURÍSTICOS -->
-
 <div class="paquete">
-	<img src="pack.png" alt="Paquete turístico Tours" class="imagen-derecha>
-	<div class="contenido-izquierda>
-	  <h2>Tours inolvidables</h2>
+	<img src="pack.png" alt="Paquete turístico Tours" class="imagen-derecha">
+	<div class="contenido-izquierda">
+	  <h3>Tours inolvidables</h3>
 	  
-	  <p>Descubrí los mejores destinos del mundo con nuestros tours 
-		personalizados.
-	  </p>
+	  <p>Descubrí los mejores destinos del mundo con nuestros tours personalizados. Las grandes ciudades, la naturales, la aventura o el relax, están a tu alcance.</p>
 	  
 	</div>
   </div>
@@ -166,24 +162,19 @@
   <div class="paquete">
 	<img src="pack2.png" alt="Paquete turístico Cruceros" class="imagen-derecha">
 	<div class="contenido-izquierda">
-	  <h2>Mejores Cruceros </h2>
+	  <h3>Mejores Cruceros </h3>
 	  
-	  <p>¿Querés disfrutar de un crucero a medida y al mejor precio? 
-		Travel Center ofrece paquetes de vacaciones en crucero diseñados 
-		específicamente para satisfacer tus gustos y necesidades, 
-		a los precios más bajos disponibles en el mercado.
-	  </p>
+	  <p>¿Querés disfrutar de un crucero a medida y al mejor precio? Travel Center ofrece paquetes de vacaciones en crucero diseñados específicamente para satisfacer tus gustos y necesidades, a los precios más bajos disponibles en el mercado.</p>
 	  
 	</div>
   </div>
   
   <div class="paquete">
-	<img src="pack3.png" alt="Paquete turístico Excursiones class="imagen-derecha>
+	<img src="pack3.png" alt="Paquete turístico Excursiones" class="imagen-derecha">
 	<div class="contenido-izquierda">
-	  <h2>Excursiones Únicas </h2>
-
-	  <p>Ofrecemos una amplia variedad de excursiones diarias regulares 
-		y personalizadas con guías multilingües especializados.</p>
+	  <h3>Excursiones Únicas </h3>
+  
+	  <p>Ofrecemos una amplia variedad de excursiones diarias regulares y personalizadas con guías multilingües especializados.</p>
 	  
 	</div>
   </div>
