CAMBIO DE CONTENIDO APLICANDO ALGO DE SEO

--- a/index.html
+++ b/index.html
@@ -154,7 +154,9 @@
 	<div class="contenido-izquierda">
 	  <h3>Tours inolvidables</h3>
 	  
-	  <p>Descubrí los mejores destinos del mundo con nuestros tours personalizados. Las grandes ciudades, la naturales, la aventura o el relax, están a tu alcance.</p>
+	  <p>¿Querés vivir una experiencia de viaje inolvidable? 
+		En nuestra agencia de viajes, nos encargamos de crear tours personalizados que se ajusten a tus preferencias y necesidades. Si soñás con descubrir nuevos horizontes, te ofrecemos destinos exóticos y misteriosos para explorar. Si preferís el relax, tenemos opciones de playas paradisíacas y destinos de lujo para que te sientas como en un sueño. ¡Te invitamos a descubrir nuestro catálogo de 
+		destinos y crear tu propio itinerario de viaje!</p>
 	  
 	</div>
   </div>
@@ -162,9 +164,16 @@
   <div class="paquete">
 	<img src="pack2.png" alt="Paquete turístico Cruceros" class="imagen-derecha">
 	<div class="contenido-izquierda">
-	  <h3>Mejores Cruceros </h3>
+	  <h3>Los mejores Cruceros </h3>
 	  
-	  <p>¿Querés disfrutar de un crucero a medida y al mejor precio? Travel Center ofrece paquetes de vacaciones en crucero diseñados específicamente para satisfacer tus gustos y necesidades, a los precios más bajos disponibles en el mercado.</p>
+	  <p>¿Querés vivir la aventura de tu vida en un crucero a medida? 
+		En Travel Center, contamos con paquetes de vacaciones en crucero 
+		que se adaptan a tus necesidades, presupuesto y preferencias. 
+		Desde destinos exóticos hasta ciudades icónicas, nuestros cruceros 
+		te permitirán explorar los mares de una forma única y exclusiva. 
+		Además, ofrecemos una amplia variedad de actividades a bordo, desde 
+		entretenimiento en vivo hasta deportes acuáticos, 
+		para que disfrutes al máximo de tu experiencia en el mar.</p>
 	  
 	</div>
   </div>
@@ -174,7 +183,16 @@
 	<div class="contenido-izquierda">
 	  <h3>Excursiones Únicas </h3>
   
-	  <p>Ofrecemos una amplia variedad de excursiones diarias regulares y personalizadas con guías multilingües especializados.</p>
+	  <p>¿Buscás conocer el mundo de una forma diferente y auténtica? 
+		En nuestra agencia te ofrecemos excursiones personalizadas con 
+		guías multilingües expertos en cada destino. Desde conocer la 
+		cultura local, con costumbre, fiestas tradicionales, turismo gastronómico
+		 con la degustación de platos típicos; hasta explorar la naturaleza 
+		 en su máximo esplendor, nuestros tours te permitirán disfrutar 
+		 de los lugares más impresionantes del planeta. ¡Te invitamos a 
+		 descubrir nuestro 
+	     catálogo de excursiones y crear tu propio itinerario de viaje 
+		con nosotros!</p>
 	  
 	</div>
   </div>
