--- a/index.html
+++ b/index.html
@@ -154,8 +154,14 @@
 	<div class="contenido-izquierda">
 	  <h3>Tours inolvidables</h3>
 	  
-	  <p>¿Querés vivir una experiencia de viaje inolvidable? 
-		En nuestra agencia de viajes, nos encargamos de crear tours personalizados que se ajusten a tus preferencias y necesidades. Si soñás con descubrir nuevos horizontes, te ofrecemos destinos exóticos y misteriosos para explorar. Si preferís el relax, tenemos opciones de playas paradisíacas y destinos de lujo para que te sientas como en un sueño. ¡Te invitamos a descubrir nuestro catálogo de 
+	  <p>¿Querés vivir una experiencia de viaje inigualable? 
+		En nuestra agencia de viajes, nos encargamos de crear tours 
+		personalizados que se ajusten a tus preferencias y necesidades. 
+		Si soñás con descubrir nuevos horizontes, te ofrecemos 
+		destinos exóticos y misteriosos para explorar. 
+		Si preferís el relax, tenemos opciones de playas paradisíacas 
+		y destinos de lujo para que te sientas como en un sueño. 
+		¡Te invitamos a descubrir nuestro catálogo de 
 		destinos y crear tu propio itinerario de viaje!</p>
 	  
 	</div>
