DÁNDOLE COLOR A LOS H3 Y PÁRRAFOS

--- a/index.html
+++ b/index.html
@@ -152,9 +152,8 @@
 <div class="paquete">
 	<img src="pack.png" alt="Paquete turístico Tours" class="imagen-derecha">
 	<div class="contenido-izquierda">
-	  <h3>Tours inolvidables</h3>
-	  
-	  <p>¿Querés vivir una experiencia de viaje inigualable? 
+	  <h3 class="titulo-paquete">Tours inolvidables</h3>
+	  <p class="texto-paquete">¿Querés vivir una experiencia de viaje inigualable? 
 		En nuestra agencia de viajes, nos encargamos de crear tours 
 		personalizados que se ajusten a tus preferencias y necesidades. 
 		Si soñás con descubrir nuevos horizontes, te ofrecemos 
@@ -170,9 +169,9 @@
   <div class="paquete">
 	<img src="pack2.png" alt="Paquete turístico Cruceros" class="imagen-derecha">
 	<div class="contenido-izquierda">
-	  <h3>Los mejores Cruceros </h3>
+	  <h3 class="titulo-paquete">Los mejores Cruceros</h3>
 	  
-	  <p>¿Querés vivir la aventura de tu vida en un crucero a medida? 
+	  <p class="texto-paquete">¿Querés vivir la aventura de tu vida en un crucero a medida? 
 		En Travel Center, contamos con paquetes de vacaciones en crucero 
 		que se adaptan a tus necesidades, presupuesto y preferencias. 
 		Desde destinos exóticos hasta ciudades icónicas, nuestros cruceros 
@@ -187,9 +186,8 @@
   <div class="paquete">
 	<img src="pack3.png" alt="Paquete turístico Excursiones" class="imagen-derecha">
 	<div class="contenido-izquierda">
-	  <h3>Excursiones Únicas </h3>
-  
-	  <p>¿Buscás conocer el mundo de una forma diferente y auténtica? 
+	  <h3 class="titulo-paquete">Excursiones Únicas</h3>
+	  <p class="texto-paquete">¿Buscás conocer el mundo de una forma diferente y auténtica? 
 		En nuestra agencia te ofrecemos excursiones personalizadas con 
 		guías multilingües expertos en cada destino. Desde conocer la 
 		cultura local, con costumbre, fiestas tradicionales, turismo gastronómico
