Modificaciones y los respectivos comentarios aclaratorios

--- a/index.html
+++ b/index.html
@@ -69,7 +69,10 @@
 		</div>
 	</header>
 
-	<!--IMAGEN DE FONDO MÁS TÍTULO Y PRESENTACIÓN DE LA EMPRESA-->
+	<!--IMAGEN DE FONDO MÁS TÍTULO Y PRESENTACIÓN DE LA EMPRESA (LA IMAGEN SE ELIGIÓ
+		CON EL OBJETIVO DE LOGRAR ARMONÍA CON LA PALETA DE COLORES DE  LA LANDING,
+		ES POR ESO QUE OFRECE UNA CONTINUIDAD CON TONOS SIMILARES A LOS DEL LOGO
+		Y LOS DIVERSOS ELEMENTOS DE LA LANDING)-->
 	<div class="slider">
 		<img src="principal2.jpg" alt="Imagen 1">
 		<div class="text-container" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); z-index: 1; text-align: center; color: #FFFFFF; max-width: 30em;">
@@ -97,7 +100,9 @@
 	</div>
 	
 	
- <!-- PRESENTACIÓN PERSONAL (EQUIPO DE LA EMPRESA) -->
+ <!-- PRESENTACIÓN PERSONAL (EQUIPO DE LA EMPRESA) (LA PRESENTACIÓN
+		PERSONAL, SE ACLARÓ EN LA CLASE DE REFUERZO DEL 31/3 QUE NO ERA OBLIGATORIA, QUE SE PODÍA
+		REALIZAR MEDIANTE LINK EXTERNO) -->
 
 	<section class="team-section" style="background-image: url('fotos.png'); background-position: left; text-align: right;">
 		<h1>Team Travel Center</h1>
@@ -125,16 +130,15 @@
 	  
 	  
  <!-- FORMULARIO BÁSICO -->
+ <h1 class="titulo2"></h1>
+ <h1>¡Dejanos tu consulta!</h1>
 
 	<div class="caja-formulario">
 		
 		<form id="formulario" method="post">
-		  <label for="nombre">Nombre:</label>
+		  <label for="nombre">Nombre y apellido</label>
 		  <input type="text" id="nombre" name="nombre">
-	  
-		  <label for="apellido">Apellido:</label>
-		  <input type="text" id="apellido" name="apellido">
-	  
+	
 		  <label for="email">Correo electrónico:</label>
 		  <input type="email" id="email" name="email">
 	  
@@ -258,15 +262,20 @@
   <button id="generar-pdf" class="oculto">Generar PDF</button>
   
 
-   <!-- IMAGEN PRINCIPAL SECUNDARIA  -->
+   <!-- IMAGEN PRINCIPAL SECUNDARIA PARA OTORGARLE UN TOQUE ATRACTIVO A LA LANDING, PERO
+OCUPANDO MENOS ESPACIO QUE LA IMAGEN PRINCIPAL -->
    <div class="container">
 	<img src="ciudades.png" alt="Ciudades del mundo" class="cities-image">
 </div>
 
-   <!-- FOOTER -->
+   <!-- EL FOOTER INCLUYE ENLACE A REPOSITORIO A MODO DE PRESENTACIÓN PERSONAL, TAL COMO SE SOLICITÓ EN LA CLASE DE REFUERZO DEL 31 DE MARZO
+EN LA QUE SE ACLARÓ QUE LA PRESENTACIÓN, DENTRO DE LA LANDING, PODÍA SER DE LA EMPRESA, COMO MUCHOS HABÍAMOS ENTENDIDO
+Y NO UNA PRESENTACIÓN PERSONAL DEL ALUMNO. CABE DESTACAR QUE DICHA PRESENTACIÓN
+FIGURARÁ EN LA WIKI DE GITHUB JUNTO A LA PRESENTACIÓN DEL PROYECTO-->
+
   <footer class="footer">
 	<p>Contacto: 0800-999-TRAVEL | Dirección: Av. Buenos Aires 1234, CABA | Email: info@travelcenter.com</p>
-	<p>Derechos reservados © 2023 Travel Center Vacation. Todos los derechos reservados.</p>
+	<p>Derechos reservados © 2023 Travel Center Vacation By <a href="https://github.com/nzalazarap">Noemí Zalazar</a> para Argentina Programa 4-0.</p>
 </footer>
 
   <script>
