Agreguè botón de llamado a la acción. Envía mail.

--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Agencia de Viajes</title>
+	<!--VINCULACIÓN DE ESTILOS.-->
 	<link rel="stylesheet" href="styles.css">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto&family=Montserrat&display=swap" rel="stylesheet">
+	<!--VINCULACIÓN JQUERY.-->
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+	<!--VINCULACIÓN VALIDATE.JS.-->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/validate.js/0.13.1/validate.min.js"></script>
 	<style>
 		header {
@@ -62,6 +65,10 @@
 	EN ESTE CÓDIGO PORQUE DE OTRO MODO QUEDABAN LAS IMÁGENES DESALINEADAS.-->
 	<header>
 		<img src="logo travel.png" alt="Logo Travel Center Vacation">
+<!--PRIMER CALL TO ACTION PARA INCITAR A LA COMPRA DEL SERVICIO. EL SEGUNDO PASO SERÁ
+	EL FORMULARIO SIMPRE Y EL TERCER CALL TO ACTION SERÍA EL FORM DE PROCESO.-->
+	<button class="quiero-viajar" onclick="enviarConsulta()"><strong>¡Quiero viajar!</strong></button>
+
 		<div class="social-media">
 			<a href="#"><img src="ig (2).png" alt="Instagram"></a>
 			<a href="#"><img src="fb (2).png" alt="Facebook"></a>
