AGREGUÉ CÓDIGO DE TESTIMONIOS

--- a/index.html
+++ b/index.html
@@ -212,6 +212,46 @@
 	</div>
   </div>
 
+
+  <div class="testimonios-container">
+	<div class="testimonio">
+	  <div class="foto-testimonio">
+		<img src="ruta-de-la-imagen" alt="nombre-del-cliente">
+	  </div>
+	  <div class="informacion-testimonio">
+		<h4> Gabriela, 35 años
+  </h4>
+		<p>Buenos Aires, Argentina.</p>
+		<blockquote>"Como viajera solitaria, me preocupaba estar sola en un lugar desconocido, pero Travel Center Vacation me hizo sentir segura y bienvenida desde el primer día. Los tours fueron increíbles, y siempre había alguien disponible para responder mis preguntas y ayudarme con cualquier cosa que necesitara. ¡Recomiendo Travel Center a todos mis amigos viajeros!" </blockquote>
+	  </div>
+	</div>
+  
+	<div class="testimonio">
+	  <div class="foto-testimonio">
+		<img src="ruta-de-la-imagen" alt="nombre-del-cliente">
+	  </div>
+	  <div class="informacion-testimonio">
+		<h4> Juan, 42 años </h4>
+		<p>Córdoba, Argentina</p>
+		<blockquote>"Mi esposa y yo queríamos hacer un viaje especial para celebrar nuestro aniversario, y Travel Center Vacation nos ayudó a hacerlo realidad. Desde la planificación hasta la experiencia en el destino, todo fue perfecto. ¡No podríamos haber pedido una mejor experiencia de viaje!" </blockquote>
+	  </div>
+	</div>
+  
+	<div class="testimonio">
+	  <div class="foto-testimonio">
+		<img src="ruta-de-la-imagen" alt="nombre-del-cliente">
+	  </div>
+	  <div class="informacion-testimonio">
+		<h4> Laura, 28 años
+  </h4>
+		<p>La Pampa, Argentina.</p>
+		<blockquote>"Viajé con Travel Center Vacation a Japón, y fue una experiencia inolvidable. Desde el primer día, nuestro guía turístico nos brindó información valiosa y nos llevó a lugares que nunca habríamos encontrado solos. Definitivamente volvería a viajar con ellos en el futuro." </blockquote>
+	  </div>
+	</div>
+  </div>
+  
+
+
   <!-- FORMULARIO DE PROCESO ESTILO WIZARD -->
 <form id="formulario">
 	<!-- Paso 1 -->
