Cambio de imagen de testimonio 2

--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
   <div class="testimonios-container">
 	<div class="testimonio">
 	  <div class="foto-testimonio">
-		<img src="ruta-de-la-imagen" alt="nombre-del-cliente">
+		<img src="Testimonio1.jpg" alt="nombre-del-cliente">
 	  </div>
 	  <div class="informacion-testimonio">
 		<h4> Gabriela, 35 años
@@ -228,7 +228,7 @@
   
 	<div class="testimonio">
 	  <div class="foto-testimonio">
-		<img src="ruta-de-la-imagen" alt="nombre-del-cliente">
+		<img src="testimonio22.jpg" alt="nombre-del-cliente">
 	  </div>
 	  <div class="informacion-testimonio">
 		<h4> Juan, 42 años </h4>
@@ -239,7 +239,7 @@
   
 	<div class="testimonio">
 	  <div class="foto-testimonio">
-		<img src="ruta-de-la-imagen" alt="nombre-del-cliente">
+		<img src="Testimonio3.jpg" alt="nombre-del-cliente">
 	  </div>
 	  <div class="informacion-testimonio">
 		<h4> Laura, 28 años
