Modifiqué foto testimonio 3

--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
   
 	<div class="testimonio">
 	  <div class="foto-testimonio">
-		<img src="Testimonio3.jpg" alt="nombre-del-cliente">
+		<img src="testimonio33.jpg" alt="nombre-del-cliente">
 	  </div>
 	  <div class="informacion-testimonio">
 		<h4> Laura, 28 años
