Cambié imágenes de packs

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 </div>
 
 <div class="paquete">
-	<img src="pack.png" alt="Paquete turístico Tours" class="imagen-derecha">
+	<img src="p1.jpg" alt="Paquete turístico Tours" class="imagen-derecha">
 	<div class="contenido-izquierda">
 	  <h3 class="titulo-paquete">Tours inolvidables</h3>
 	  <p class="texto-paquete">¿Querés vivir una experiencia de viaje inigualable? 
@@ -178,7 +178,7 @@
   </div>
   
   <div class="paquete">
-	<img src="pack2.png" alt="Paquete turístico Cruceros" class="imagen-derecha">
+	<img src="p2.jpg" alt="Paquete turístico Cruceros" class="imagen-derecha">
 	<div class="contenido-izquierda">
 	  <h3 class="titulo-paquete">Los mejores Cruceros</h3>
 	  
@@ -195,7 +195,7 @@
   </div>
   
   <div class="paquete">
-	<img src="pack4.png" alt="Paquete turístico Excursiones" class="imagen-derecha">
+	<img src="p3.jpg" alt="Paquete turístico Excursiones" class="imagen-derecha">
 	<div class="contenido-izquierda">
 	  <h3 class="titulo-paquete">Excursiones Únicas</h3>
 	  <p class="texto-paquete">¿Buscás conocer el mundo de una forma diferente y auténtica? 
