--- a/index.html
+++ b/index.html
@@ -135,27 +135,28 @@
 		</strong></p>
 	  </section>
 	  
-	  
- <!-- FORMULARIO BÁSICO -->
- <h1 class="titulo2"></h1>
- <h1>¡Dejanos tu consulta!</h1>
-
-	<div class="caja-formulario">
-		
-		<form id="formulario" method="post">
-		  <label for="nombre">Nombre y apellido</label>
-		  <input type="text" id="nombre" name="nombre">
+	  <!-- FORMULARIO BÁSICO -->
+<div class="contenedor-formulario" style="background-image: url('principal.jpg');">
 	
-		  <label for="email">Correo electrónico:</label>
-		  <input type="email" id="email" name="email">
-	  
-		  <label for="mensaje">Mensaje:</label>
-		  <textarea id="mensaje" name="mensaje"></textarea>
-	  
-		  <input type="submit" value="Enviar tu consulta">
-		</form>
-		
-	  </div>
+  
+	<div class="caja-formulario">
+	  <form id="formulario" method="post">
+		<label for="nombre">Nombre y apellido</label>
+		<input type="text" id="nombre" name="nombre">
+  
+		<label for="email">Correo electrónico:</label>
+		<input type="email" id="email" name="email">
+  
+		<label for="mensaje">Mensaje:</label>
+		<textarea id="mensaje" name="mensaje"></textarea>
+  
+		<input type="submit" value="Enviar tu consulta">
+	  </form>
+	</div>
+  </div>
+  
+  
+  
 
 	  
 </div>
@@ -212,7 +213,11 @@
 	</div>
   </div>
 
+<!-- IMAGEN PRINCIPAL4 DE FONDO -->
+  <img src="principal4.jpg" alt="Imagen vacaciones">
 
+
+  <!-- TESTIMONIOS DE CLIENTES -->
   <div class="testimonios-container">
 	<div class="testimonio">
 	  <div class="foto-testimonio">
