--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 	  </section>
 	  
 	  <!-- FORMULARIO BÁSICO -->
-<div class="contenedor-formulario" style="background-image: url('principal.jpg');">
+<div class="contenedor-formulario" style="background-image: url('#');">
 	
   
 	<div class="caja-formulario">
@@ -162,7 +162,7 @@
 </div>
 
 <div class="paquete">
-	<img src="p1.jpg" alt="Paquete turístico Tours" class="imagen-derecha">
+	
 	<div class="contenido-izquierda">
 	  <h3 class="titulo-paquete">Tours inolvidables</h3>
 	  <p class="texto-paquete">¿Querés vivir una experiencia de viaje inigualable? 
@@ -179,7 +179,7 @@
   </div>
   
   <div class="paquete">
-	<img src="p2.jpg" alt="Paquete turístico Cruceros" class="imagen-derecha">
+	
 	<div class="contenido-izquierda">
 	  <h3 class="titulo-paquete">Los mejores Cruceros</h3>
 	  
@@ -196,7 +196,7 @@
   </div>
   
   <div class="paquete">
-	<img src="p3.jpg" alt="Paquete turístico Excursiones" class="imagen-derecha">
+	
 	<div class="contenido-izquierda">
 	  <h3 class="titulo-paquete">Excursiones Únicas</h3>
 	  <p class="texto-paquete">¿Buscás conocer el mundo de una forma diferente y auténtica? 
@@ -214,7 +214,7 @@
   </div>
 
 <!-- IMAGEN PRINCIPAL4 DE FONDO -->
-  <img src="principal4.jpg" alt="Imagen vacaciones">
+  <img src="principal.jpg" alt="Imagen vacaciones">
 
 
   <!-- TESTIMONIOS DE CLIENTES -->
@@ -261,6 +261,7 @@
 <form id="formulario">
 	<!-- Paso 1 -->
 	<div class="paso" id="paso1">
+		<h2>Cotizá tu viaje</h2>
 	  <h2>Paso 1: Información personal</h2>
 	  <label for="nombre">Nombre:</label>
 	  <input type="text" id="nombre" name="nombre">
