Cambio en imagen

--- a/index.html
+++ b/index.html
@@ -218,9 +218,11 @@
 	</div>
   </div>
 
-<!-- IMAGEN PRINCIPAL4 DE FONDO -->
-  <img src="principal.jpg" alt="Imagen vacaciones">
+<!-- IMAGEN MAPA TURÍSTICO -->
 
+  <div style="text-align: center; margin: 30px;">
+	<img src="mapa.png" alt="Imagen mapa turístico">
+  </div>
 
   <!-- TESTIMONIOS DE CLIENTES -->
   <div class="testimonios-container">
