Agrego comentarios aclaratorios

--- a/index.html
+++ b/index.html
@@ -219,9 +219,8 @@
   </div>
 
 <!-- IMAGEN MAPA TURÍSTICO -->
-
-  <div style="text-align: center; margin: 30px;">
-	<img src="mapa.png" alt="Imagen mapa turístico">
+  <div style="text-align: center; margin: 30px; display: inline-block;">
+	<img src="mapa.png" alt="Imagen mapa turístico" style="width: 80%;">
   </div>
 
   <!-- TESTIMONIOS DE CLIENTES -->
