Agregando algunas imágenes

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 			
 			<h1>¡Tu sueño de viajar hecho realidad!</h1>
 	
-			<p class="rectangulo">Bienvenido a 
+			<p class="rectangulo">Te damos la bienvenida a 
 				la agencia de viajes que te lleva a los 
 				lugares más hermosos del mundo. 
 				Nuestro objetivo es hacer que cada viaje sea 
@@ -99,7 +99,7 @@
 				que supere todas tus expectativas. 
 				Hace más de 10 años nos dedicamos a explorar 
 				y descubrir los destinos más sorprendentes 
-				del mundo, y a diseñar paquetes de viaje 
+				del mundo, y a diseñar paquetes turísticos 
 				personalizados que se ajusten a tus 
 				necesidades y preferencias.
 			</p>
@@ -117,22 +117,22 @@
 		<p>
 		  ¿Querés hacer de tus sueños una realidad? 
 		  ¡Entonces estás en el lugar correcto! 
-		  Somos el equipo de Travel Center, y estamos aquí para ayudarte a 
+		  Somos el equipo de Travel Center Vacation, y estamos aquí para ayudarte a 
 		  descubrir el mundo.
 		  Somos expertos en viajes, apasionados por nuestro trabajo y comprometidos en ofrecerte 
 		  la mejor atención y servicio personalizado. 
 		  Nos encargamos de todo, desde la elección de destinos 
 		  hasta la planificación de actividades y alojamiento, 
-		  para que no tengas que preocuparte por nada.
+		  para que no tengas que preocuparte por nada. Sólo de disfrutar.
 		  Además, estamos constantemente actualizándonos en cuanto a 
-		  destinos y tendencias para poder brindarte siempre las 
+		 tendencias para poder brindarte siempre las 
 		  mejores opciones, y hacemos todo lo posible para que 
-		  tu experiencia de viaje sea única e inolvidable.
+		  tu experiencia sea única e inolvidable.
 		  En Travel Center, creemos que viajar es una de 
 		  las mejores formas de enriquecer nuestra vida, 
 		  y estamos aquí para hacerlo realidad para vos. 
-		  Así que, ¿qué esperas? ¡Dejanos ayudarte a descubrir 
-		  el mundo y vivir experiencias inolvidables!
+		 ¡Dejanos ayudarte a descubrir 
+		  el mundo y vivir momentos inolvidables!
 		</p>
 	  </section>
 	  
@@ -163,19 +163,22 @@
   </div>
   
   
-  
-
 	  
 </div>
 
 
-<!--ACÁ HABÍA PROBADO CON TEXTO E IMAGE, DE VARIAS FORMAS. PERO NO ME GUSTA COMO QUEDA. AÚN EVALUANDO OPCIONES-->
+
+  <div style="text-align: right; margin: 50px; display: inline-block;">
+	<img src="sellos.png" alt="Fotos de vacaciones" style="width: 70%;">
+</div>
+
+<!--ACÁ HABÍA PROBADO CON TEXTO E IMAGEN, DE VARIAS FORMAS. PERO NO ME GUSTA COMO QUEDA. AÚN EVALUANDO OPCIONES-->
 <div class="paquete">
 	
 	<div class="contenido-izquierda">
 	  <h2 class="titulo-paquete">Tours inolvidables </h2>
 
-	  <p class="texto-paquete">¿Querés vivir una experiencia de viaje inigualable? 
+	  <p class="texto-paquete">¿Querés vivir una experiencia inigualable? 
 		En nuestra agencia de viajes, nos encargamos de crear tours 
 		personalizados que se ajusten a tus preferencias y necesidades. 
 		Si soñás con descubrir nuevos horizontes, te ofrecemos 
@@ -212,7 +215,7 @@
 	  
 	  <p class="texto-paquete">¿Buscás conocer el mundo de una forma diferente y auténtica? 
 		En nuestra agencia te ofrecemos excursiones personalizadas con 
-		guías multilingües expertos en cada destino. Desde conocer la 
+		guías multilingües expertos en cada ciudad. Desde conocer la 
 		cultura local, con costumbre, fiestas tradicionales, turismo gastronómico
 		 con la degustación de platos típicos; hasta explorar la naturaleza 
 		 en su máximo esplendor, nuestros tours te permitirán disfrutar 
