Modifiqué el texto del botón

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
 <!--PRIMER CALL TO ACTION PARA INCITAR A LA COMPRA DEL SERVICIO. EL SEGUNDO PASO SERÁ
 	EL FORMULARIO SIMPRE Y EL TERCER CALL TO ACTION SERÍA EL FORM DE PROCESO.-->
-	<button class="quiero-viajar" onclick="enviarConsulta()"><strong>¡Quiero viajar!</strong></button>
+	<button class="quiero-viajar" onclick="enviarConsulta()"><strong>Quiero saber más</strong></button>
 
 		<div class="social-media">
 			<a href="#"><img src="ig (2).png" alt="Instagram"></a>
