--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 
 
   <div style="text-align: right; margin: 50px; display: inline-block;">
-	<img src="sellos.png" alt="Fotos de vacaciones" style="width: 70%;">
+	<img src="fotos2.png" alt="Fotos de vacaciones" style="width: 70%;">
 </div>
 
 <!--ACÁ HABÍA PROBADO CON TEXTO E IMAGEN, DE VARIAS FORMAS. PERO NO ME GUSTA COMO QUEDA. AÚN EVALUANDO OPCIONES-->
