Agregué packs turísticos mediante caja de 4 img

--- a/index.html
+++ b/index.html
@@ -175,7 +175,13 @@
 	<img src="fotos2.png" alt="Fotos de vacaciones" style="width: 70%;">
 </div>
 
-
+<h2>CONOCÉ NUESTROS PACKS TURÍSTICOS</h2>
+    <div class="image-container">
+      <img src="inolvidables.jpg" alt="Inolvidables" class="image" />
+      <img src="emocionantes.jpg" alt="Emocionantes" class="image" />
+      <img src="inolvidables.jpg" alt="Inolvidables" class="image" />
+      <img src="emocionantes.jpg" alt="Emocionantes" class="image" />
+    </div>
 
 
 <!--ACÁ HABÍA PROBADO CON TEXTO E IMAGEN, DE VARIAS FORMAS. PERO NO ME GUSTA COMO QUEDA. AÚN EVALUANDO OPCIONES-->
