--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
     <div class="image-container">
       <img src="inolvidables2.jpg" alt="Inolvidables" class="image" />
       <img src="emocionantes.jpg" alt="Emocionantes" class="image" />
-      <img src="inolvidables.jpg" alt="Inolvidables" class="image" />
+      <img src="incomparables.jpg" alt="Inolvidables" class="image" />
       <img src="emocionantes.jpg" alt="Emocionantes" class="image" />
     </div>
 
