--- a/index.html
+++ b/index.html
@@ -169,6 +169,15 @@
 	  
 </div>
 
+<div class="image-container">
+	<h3>Elegí tu medio de pago preferido</h3>
+	<img src="medios de pago.png" alt="Medios de pago" style="width: 100%;">
+  </div>
+
+
+  <div class="packs">
+	<h3>Y accedé al pack turístico de tus sueños</h3>
+  </div>
 
     <div class="image-container">
       <img src="inolvidables2.jpg" alt="Inolvidables" class="image" />
@@ -177,12 +186,19 @@
       <img src="emocionantes.jpg" alt="Emocionantes" class="image" />
     </div>
 
-
+	
 
 <!-- IMAGEN MAPA TURÍSTICO -->
   <div style="text-align: center; margin: 30px; display: inline-block;">
 	<img src="mapa.png" alt="Imagen mapa turístico" style="width: 80%;">
   </div>
+
+
+  <div class="clientes">
+	<h3>¡Y disfrutá tanto como ellos!</h3>
+	<h3>Queremos que el tuyo sea el próximo testimonio</h3>
+  </div>
+
 
   <!-- TESTIMONIOS DE CLIENTES -->
   <div class="testimonios-container">
