--- a/index.html
+++ b/index.html
@@ -239,16 +239,17 @@
   </div>
   
 
+  <div class="cotizar">
+	<h3>¿Qué esperás para cotizar tu próximo sueño?</h3>
+  </div>
+
 
   <!-- FORMULARIO DE PROCESO ESTILO WIZARD -->
-
-<form id="formularioproceso">
-
-	<!-- PASO 1 INICIA SOLICITANDO NOMBRE Y APELLIDO Y UNA VEZ QUE SE COMPETE
+  <!-- PASO 1 INICIA SOLICITANDO NOMBRE Y APELLIDO Y UNA VEZ QUE SE COMPETE
 	CORRECTAMENTE, SE LO AUTORIZA A ACCEDER AL SIGUIENTE PASO-->
 
+<form id="formularioproceso">
 	<div class="paso" id="paso1">
-		<h2>Cotizá tu viaje</h2>
 	  <h2>Paso 1: Información personal</h2>
 	  <label for="nombreuser">Nombre y apellido:</label>
 	  <input type="text" id="nombre" name="nombreuser">
